<?xml version="1.0"?>
<package format="2">
  <name>ros_gym_msgs</name>
  <version>0.0.0</version>
  <description>The ros_gym_msgs package</description>
  <maintainer email="saifullah3396@gmail.com">Saifullah</maintainer>
  <license>BSD</license>
  <author email="saifullah3396@gmail.com">Saifullah</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend> 

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  </export>
</package>
