<?xml version="1.0"?>
<package format="2">
  <name>cart_pole_env_ros_msgs</name>
  <version>0.0.0</version>
  <description>The cart_pole_env_ros_msgs package</description>
  <maintainer email="saifullah3396@gmail.com">Saifullah</maintainer>
  <license>BSD</license>
  <author email="saifullah3396@gmail.com">Saifullah</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ros_gym_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>ros_gym_msgs</exec_depend>
  <export>
  </export>
</package>
